--- a/src/output.css
+++ b/src/output.css
@@ -578,18 +578,6 @@ video {
   }
 }
 
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  border-width: 0;
-}
-
 .static {
   position: static;
 }
@@ -646,10 +634,6 @@ video {
   left: 0px;
 }
 
-.left-1\/2 {
-  left: 50%;
-}
-
 .left-11 {
   left: 2.75rem;
 }
@@ -674,6 +658,10 @@ video {
   right: 0px;
 }
 
+.right-1 {
+  right: 0.25rem;
+}
+
 .right-7 {
   right: 1.75rem;
 }
@@ -692,10 +680,6 @@ video {
 
 .top-1 {
   top: 0.25rem;
-}
-
-.top-1\/2 {
-  top: 50%;
 }
 
 .top-14 {
@@ -718,40 +702,24 @@ video {
   top: 13rem;
 }
 
-.top-\[50\%\] {
-  top: 50%;
+.top-\[\"\+\$top\+\"\%\] {
+  top: "+$top+"%;
 }
 
-.top-\[69\%\] {
-  top: 69%;
-}
-
-.top-2 {
-  top: 0.5rem;
-}
-
-.top-24 {
-  top: 6rem;
-}
-
-.top-\[25\%\] {
-  top: 25%;
+.top-\[10\%\] {
+  top: 10%;
 }
 
 .top-\[40\%\] {
   top: 40%;
 }
 
-.right-1 {
-  right: 0.25rem;
+.top-\[50\%\] {
+  top: 50%;
 }
 
 .-z-10 {
   z-index: -10;
-}
-
-.z-0 {
-  z-index: 0;
 }
 
 .z-10 {
@@ -988,8 +956,20 @@ video {
   height: 0.375rem;
 }
 
+.h-10 {
+  height: 2.5rem;
+}
+
+.h-11 {
+  height: 2.75rem;
+}
+
 .h-20 {
   height: 5rem;
+}
+
+.h-24 {
+  height: 6rem;
 }
 
 .h-28 {
@@ -1024,48 +1004,8 @@ video {
   height: 100vh;
 }
 
-.h-24 {
-  height: 6rem;
-}
-
-.h-\[93px\] {
-  height: 93px;
-}
-
-.h-\[90px\] {
-  height: 90px;
-}
-
-.h-\[85px\] {
-  height: 85px;
-}
-
-.h-\[88px\] {
-  height: 88px;
-}
-
-.h-\[87px\] {
-  height: 87px;
-}
-
-.h-\[8px\] {
-  height: 8px;
-}
-
-.h-\[86px\] {
-  height: 86px;
-}
-
-.h-10 {
-  height: 2.5rem;
-}
-
-.h-12 {
-  height: 3rem;
-}
-
-.h-11 {
-  height: 2.75rem;
+.h-6 {
+  height: 1.5rem;
 }
 
 .max-h-\[32px\] {
@@ -1078,6 +1018,14 @@ video {
 
 .w-1\/3 {
   width: 33.333333%;
+}
+
+.w-10 {
+  width: 2.5rem;
+}
+
+.w-11 {
+  width: 2.75rem;
 }
 
 .w-4 {
@@ -1108,76 +1056,12 @@ video {
   width: 15.625rem;
 }
 
-.w-\[97\%\] {
-  width: 97%;
-}
-
 .w-full {
   width: 100%;
 }
 
 .w-screen {
   width: 100vw;
-}
-
-.w-24 {
-  width: 6rem;
-}
-
-.w-20 {
-  width: 5rem;
-}
-
-.w-2 {
-  width: 0.5rem;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-\[93px\] {
-  width: 93px;
-}
-
-.w-\[90px\] {
-  width: 90px;
-}
-
-.w-\[85px\] {
-  width: 85px;
-}
-
-.w-\[88px\] {
-  width: 88px;
-}
-
-.w-\[87px\] {
-  width: 87px;
-}
-
-.w-\[8px\] {
-  width: 8px;
-}
-
-.w-\[86px\] {
-  width: 86px;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-12 {
-  width: 3rem;
-}
-
-.w-1 {
-  width: 0.25rem;
-}
-
-.w-11 {
-  width: 2.75rem;
 }
 
 .max-w-12 {
@@ -1224,6 +1108,14 @@ video {
   max-width: 140px;
 }
 
+.max-w-\[15rem\] {
+  max-width: 15rem;
+}
+
+.max-w-\[19rem\] {
+  max-width: 19rem;
+}
+
 .max-w-\[21rem\] {
   max-width: 21rem;
 }
@@ -1256,14 +1148,6 @@ video {
   max-width: 20rem;
 }
 
-.max-w-\[\] {
-  max-width: ;
-}
-
-.max-w-\[19rem\] {
-  max-width: 19rem;
-}
-
 .flex-shrink-0 {
   flex-shrink: 0;
 }
@@ -1272,18 +1156,8 @@ video {
   flex-grow: 1;
 }
 
-.-translate-x-1\/2 {
-  --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .-translate-x-full {
   --tw-translate-x: -100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-1\/2 {
-  --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1351,16 +1225,8 @@ video {
   align-items: flex-start;
 }
 
-.items-end {
-  align-items: flex-end;
-}
-
 .items-center {
   align-items: center;
-}
-
-.items-baseline {
-  align-items: baseline;
 }
 
 .items-stretch {
@@ -1643,11 +1509,6 @@ video {
   border-color: rgb(32 200 95 / var(--tw-border-opacity));
 }
 
-.border-\[\#2D3EBF\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(45 62 191 / var(--tw-border-opacity));
-}
-
 .border-\[\#3F52FF\] {
   --tw-border-opacity: 1;
   border-color: rgb(63 82 255 / var(--tw-border-opacity));
@@ -1692,11 +1553,6 @@ video {
   --tw-border-opacity: 1;
   border-left-color: rgb(0 0 0 / var(--tw-border-opacity));
   border-right-color: rgb(0 0 0 / var(--tw-border-opacity));
-}
-
-.border-b-\[\#2D3EBF\] {
-  --tw-border-opacity: 1;
-  border-bottom-color: rgb(45 62 191 / var(--tw-border-opacity));
 }
 
 .border-b-\[\#D9CBA5\] {
@@ -1762,6 +1618,11 @@ video {
 .border-t-\[\#c9c3ba\] {
   --tw-border-opacity: 1;
   border-top-color: rgb(201 195 186 / var(--tw-border-opacity));
+}
+
+.border-b-\[\#2D3EBF\] {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(45 62 191 / var(--tw-border-opacity));
 }
 
 .bg-\[\#20C85F\] {
@@ -1910,26 +1771,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-lime-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(101 163 13 / var(--tw-bg-opacity));
-}
-
-.bg-gray-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
-}
-
-.bg-deep-green {
-  --tw-bg-opacity: 1;
-  background-color: rgb(25 131 75 / var(--tw-bg-opacity));
-}
-
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
@@ -2304,14 +2145,6 @@ video {
   padding-top: 2rem;
 }
 
-.pt-\[23rem\] {
-  padding-top: 23rem;
-}
-
-.ps-10 {
-  padding-inline-start: 2.5rem;
-}
-
 .text-left {
   text-align: left;
 }
@@ -2338,6 +2171,10 @@ video {
 .text-5xl {
   font-size: 3rem;
   line-height: 1;
+}
+
+.text-\[0\.65rem\] {
+  font-size: 0.65rem;
 }
 
 .text-\[14px\] {
@@ -2379,14 +2216,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-\[0\.25rem\] {
-  font-size: 0.25rem;
-}
-
-.text-\[0\.65rem\] {
-  font-size: 0.65rem;
 }
 
 .font-bold {
@@ -2568,10 +2397,6 @@ video {
   text-decoration-line: underline;
 }
 
-.opacity-0 {
-  opacity: 0;
-}
-
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
@@ -2649,20 +2474,10 @@ video {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
-.transition-all {
-  transition-property: all;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
 .transition-transform {
   transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
-}
-
-.duration-300 {
-  transition-duration: 300ms;
 }
 
 .duration-500 {
@@ -2809,10 +2624,6 @@ video {
   content: var(--tw-content);
 }
 
-.hover\:z-50:hover {
-  z-index: 50;
-}
-
 .hover\:scale-105:hover {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
@@ -2825,10 +2636,8 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.hover\:scale-100:hover {
-  --tw-scale-x: 1;
-  --tw-scale-y: 1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.hover\:cursor-pointer:hover {
+  cursor: pointer;
 }
 
 .hover\:border:hover {
@@ -2842,11 +2651,6 @@ video {
 .hover\:border-blue-600:hover {
   --tw-border-opacity: 1;
   border-color: rgb(37 99 235 / var(--tw-border-opacity));
-}
-
-.hover\:bg-\[\#2D3EBF\]:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(45 62 191 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-\[\#33D977\]:hover {
@@ -2882,6 +2686,11 @@ video {
 .hover\:bg-orange-400:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(251 146 60 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#2D3EBF\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(45 62 191 / var(--tw-bg-opacity));
 }
 
 .hover\:font-bold:hover {
@@ -2962,14 +2771,6 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.peer:checked ~ .peer-checked\:z-10 {
-  z-index: 10;
-}
-
-.peer:checked ~ .peer-checked\:opacity-100 {
-  opacity: 1;
-}
-
 @media (min-width: 640px) {
   .sm\:flex-row {
     flex-direction: row;
@@ -2987,10 +2788,6 @@ video {
 
   .md\:top-32 {
     top: 8rem;
-  }
-
-  .md\:top-\[25\%\] {
-    top: 25%;
   }
 
   .md\:mx-0 {
@@ -3051,6 +2848,10 @@ video {
     height: 1.5rem;
   }
 
+  .md\:h-12 {
+    height: 3rem;
+  }
+
   .md\:h-8 {
     height: 2rem;
   }
@@ -3081,11 +2882,6 @@ video {
 
   .md\:max-w-xs {
     max-width: 20rem;
-  }
-
-  .md\:-translate-x-5 {
-    --tw-translate-x: -1.25rem;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   .md\:grid-cols-2 {
@@ -3196,12 +2992,6 @@ video {
     margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
-  .md\:space-x-6 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(1.5rem * var(--tw-space-x-reverse));
-    margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
-  }
-
   .md\:space-x-7 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-x-reverse: 0;
     margin-right: calc(1.75rem * var(--tw-space-x-reverse));
@@ -3223,20 +3013,16 @@ video {
     background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   }
 
-  .md\:p-1 {
-    padding: 0.25rem;
-  }
-
-  .md\:p-4 {
-    padding: 1rem;
-  }
-
   .md\:p-5 {
     padding: 1.25rem;
   }
 
   .md\:p-8 {
     padding: 2rem;
+  }
+
+  .md\:p-1 {
+    padding: 0.25rem;
   }
 
   .md\:px-16 {
