--- a/src/output.css
+++ b/src/output.css
@@ -1020,6 +1020,26 @@ video {
   height: 100vh;
 }
 
+.h-\[5\.50rem\] {
+  height: 5.50rem;
+}
+
+.h-2 {
+  height: 0.5rem;
+}
+
+.h-16 {
+  height: 4rem;
+}
+
+.h-\[4\.5rem\] {
+  height: 4.5rem;
+}
+
+.h-\[3\.5rem\] {
+  height: 3.5rem;
+}
+
 .max-h-10 {
   max-height: 2.5rem;
 }
@@ -1098,6 +1118,34 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-\[5\.50rem\] {
+  width: 5.50rem;
+}
+
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
+.w-1 {
+  width: 0.25rem;
+}
+
+.w-16 {
+  width: 4rem;
+}
+
+.w-\[4\.5rem\] {
+  width: 4.5rem;
+}
+
+.w-\[3\.5rem\] {
+  width: 3.5rem;
 }
 
 .min-w-10 {
@@ -1619,19 +1667,14 @@ video {
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
-.border-green-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(134 239 172 / var(--tw-border-opacity));
-}
-
-.border-light-gray {
-  --tw-border-opacity: 1;
-  border-color: rgb(245 245 245 / var(--tw-border-opacity));
-}
-
 .border-gray-400 {
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
+}
+
+.border-green-300 {
+  --tw-border-opacity: 1;
+  border-color: rgb(134 239 172 / var(--tw-border-opacity));
 }
 
 .border-x-black {
@@ -2995,8 +3038,33 @@ video {
 }
 
 @media (min-width: 640px) {
+  .sm\:inline-block {
+    display: inline-block;
+  }
+
+  .sm\:h-24 {
+    height: 6rem;
+  }
+
+  .sm\:h-\[5\.50rem\] {
+    height: 5.50rem;
+  }
+
+  .sm\:w-24 {
+    width: 6rem;
+  }
+
+  .sm\:w-\[5\.50rem\] {
+    width: 5.50rem;
+  }
+
   .sm\:flex-row {
     flex-direction: row;
+  }
+
+  .sm\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
 
@@ -3075,6 +3143,22 @@ video {
     height: 13rem;
   }
 
+  .md\:h-24 {
+    height: 6rem;
+  }
+
+  .md\:h-20 {
+    height: 5rem;
+  }
+
+  .md\:h-\[5\.25rem\] {
+    height: 5.25rem;
+  }
+
+  .md\:h-\[5\.50rem\] {
+    height: 5.50rem;
+  }
+
   .md\:w-1\/2 {
     width: 50%;
   }
@@ -3089,6 +3173,22 @@ video {
 
   .md\:w-2\/4 {
     width: 50%;
+  }
+
+  .md\:w-24 {
+    width: 6rem;
+  }
+
+  .md\:w-20 {
+    width: 5rem;
+  }
+
+  .md\:w-\[5\.25rem\] {
+    width: 5.25rem;
+  }
+
+  .md\:w-\[5\.50rem\] {
+    width: 5.50rem;
   }
 
   .md\:max-w-72 {
@@ -3342,6 +3442,10 @@ video {
     padding-inline-start: 0px;
   }
 
+  .md\:pl-12 {
+    padding-left: 3rem;
+  }
+
   .md\:text-left {
     text-align: left;
   }
@@ -3397,16 +3501,44 @@ video {
     display: block;
   }
 
+  .lg\:flex {
+    display: flex;
+  }
+
+  .lg\:h-\[6\.5rem\] {
+    height: 6.5rem;
+  }
+
+  .lg\:h-28 {
+    height: 7rem;
+  }
+
   .lg\:w-1\/4 {
     width: 25%;
+  }
+
+  .lg\:w-\[6\.5rem\] {
+    width: 6.5rem;
+  }
+
+  .lg\:w-28 {
+    width: 7rem;
   }
 
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
+  .lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .lg\:items-start {
     align-items: flex-start;
+  }
+
+  .lg\:pl-12 {
+    padding-left: 3rem;
   }
 
   .lg\:text-6xl {
