--- a/src/output.css
+++ b/src/output.css
@@ -718,6 +718,18 @@ video {
   top: 50%;
 }
 
+.top-\[\%\] {
+  top: %;
+}
+
+.top-\[40\%\] {
+  top: 40%;
+}
+
+.top-\[25\%\] {
+  top: 25%;
+}
+
 .-z-10 {
   z-index: -10;
 }
@@ -1000,12 +1012,12 @@ video {
   height: 24rem;
 }
 
-.h-\[400px\] {
-  height: 400px;
+.h-\[4\.5rem\] {
+  height: 4.5rem;
 }
 
-.h-\[6\.5rem\] {
-  height: 6.5rem;
+.h-\[400px\] {
+  height: 400px;
 }
 
 .h-\[638px\] {
@@ -1018,26 +1030,6 @@ video {
 
 .h-screen {
   height: 100vh;
-}
-
-.h-\[5\.50rem\] {
-  height: 5.50rem;
-}
-
-.h-2 {
-  height: 0.5rem;
-}
-
-.h-16 {
-  height: 4rem;
-}
-
-.h-\[4\.5rem\] {
-  height: 4.5rem;
-}
-
-.h-\[3\.5rem\] {
-  height: 3.5rem;
 }
 
 .max-h-10 {
@@ -1066,6 +1058,10 @@ video {
 
 .w-11 {
   width: 2.75rem;
+}
+
+.w-20 {
+  width: 5rem;
 }
 
 .w-24 {
@@ -1108,8 +1104,8 @@ video {
   width: 15.625rem;
 }
 
-.w-\[6\.5rem\] {
-  width: 6.5rem;
+.w-\[4\.5rem\] {
+  width: 4.5rem;
 }
 
 .w-full {
@@ -1118,34 +1114,6 @@ video {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-\[5\.50rem\] {
-  width: 5.50rem;
-}
-
-.w-2 {
-  width: 0.5rem;
-}
-
-.w-20 {
-  width: 5rem;
-}
-
-.w-1 {
-  width: 0.25rem;
-}
-
-.w-16 {
-  width: 4rem;
-}
-
-.w-\[4\.5rem\] {
-  width: 4.5rem;
-}
-
-.w-\[3\.5rem\] {
-  width: 3.5rem;
 }
 
 .min-w-10 {
@@ -2255,10 +2223,6 @@ video {
   padding-inline-end: 1rem;
 }
 
-.pl-12 {
-  padding-left: 3rem;
-}
-
 .pl-4 {
   padding-left: 1rem;
 }
@@ -3143,22 +3107,6 @@ video {
     height: 13rem;
   }
 
-  .md\:h-24 {
-    height: 6rem;
-  }
-
-  .md\:h-20 {
-    height: 5rem;
-  }
-
-  .md\:h-\[5\.25rem\] {
-    height: 5.25rem;
-  }
-
-  .md\:h-\[5\.50rem\] {
-    height: 5.50rem;
-  }
-
   .md\:w-1\/2 {
     width: 50%;
   }
@@ -3173,22 +3121,6 @@ video {
 
   .md\:w-2\/4 {
     width: 50%;
-  }
-
-  .md\:w-24 {
-    width: 6rem;
-  }
-
-  .md\:w-20 {
-    width: 5rem;
-  }
-
-  .md\:w-\[5\.25rem\] {
-    width: 5.25rem;
-  }
-
-  .md\:w-\[5\.50rem\] {
-    width: 5.50rem;
   }
 
   .md\:max-w-72 {
@@ -3442,10 +3374,6 @@ video {
     padding-inline-start: 0px;
   }
 
-  .md\:pl-12 {
-    padding-left: 3rem;
-  }
-
   .md\:text-left {
     text-align: left;
   }
@@ -3505,32 +3433,32 @@ video {
     display: flex;
   }
 
-  .lg\:h-\[6\.5rem\] {
-    height: 6.5rem;
-  }
-
   .lg\:h-28 {
     height: 7rem;
+  }
+
+  .lg\:h-\[6\.5rem\] {
+    height: 6.5rem;
   }
 
   .lg\:w-1\/4 {
     width: 25%;
   }
 
-  .lg\:w-\[6\.5rem\] {
-    width: 6.5rem;
-  }
-
   .lg\:w-28 {
     width: 7rem;
   }
 
-  .lg\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+  .lg\:w-\[6\.5rem\] {
+    width: 6.5rem;
   }
 
   .lg\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .lg\:items-start {
